attempted to fix alignment of crdits popup

--- a/analbum.css
+++ b/analbum.css
@@ -352,11 +352,13 @@
 	border: 1px solid #666666;
 	border-radius: 2px;
 	padding: 5px 10px;
+	margin-left: -11px; /* offset by padding + border */
+	margin-top: -6px;
 	position: absolute;
 	background-image: linear-gradient(to bottom, #363636, #242424);
 	box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.5);
-	top: -5px;
-	left: -11px;
+	top: 0;
+	left: 0;
 	white-space: nowrap;
 }
 .analbum-track-credits-popup strong {
